# pentaryn

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICK-START.md  README.md  pdf-readme.md  pentaryn.code-workspace  pyproject.toml  rules.jsonl  test_flags.py
.claude/: settings.json
.github/: copilot-instructions.md
.outputs/: black-ledger-members-notes.md
adhok_notes/: goo-scroll.md  human-names-elderholt-vs-general-2026-01-30.md  loot-pack-ancient-ruins-level-3-2026-01-31.md  ryme-the-girl-gave.md
campaigns/ardenford-underdogs/: _overview.md  handout.md
characters/: README.md  players_notes.md
characters/npcs/: example-innkeeper.md
characters/player-characters/: jeff-bazgar.md  kristine-marwen.md  nicole-sabriel.khor-bhoh-khor.md  nicole-sabriel.md  nicole-sabriel.narrative.md
combat-runner/: .build-state.md  actions.jsonl  combat-instructions.md  launch.py  sdk_session.py
combat-runner/.testbot/: SESSION-SUMMARY.md  cron.err  playtest-20260525-thrulm.md  playtest-20260528-thrulm.md  playtest-20260612-thrulm-fire8.md  playtest-20260612-thrulm.md  playtest-20260616-thrulm-R91.md  playtest-thrulm-2026-06-05.md  rotation.md  rotation.yml  scenarios.yml  thrulm-cron-prompt.md  thrulm-rotation.json
combat-runner/daemon/: README.md  build-daemon.sh  com.dnd.combat-build-daemon.plist  prompt.txt
combat-runner/gui/: README.md  action_numbering.py  app.py  command_model.py  command_tags.py  dispatcher.py  (+11 more)
creatures/: README.md
docs/: history.public.html  history.the-compass-edge.html  history.world.ages.ages.html  history.world.elderholt.d9f06d570dca.html  history.world.factions.ardenhaven.rakthok.html  history.world.factions.rakthok-horde.rakthok-horde-rakthok-view.b43aa8e1fecc.html  history.world.world-history-elven.6a8d03d64642.html  history.world.world-history-merrowgate.99eaa8d92400.html  index.html
fonts/: INSTALL.md
items/: README.md
quests/: README.md
recordings_transcripts/: DnD 1.jsonl  DnD 1.txt  DnD 2.jsonl  DnD 2.txt
rules/: README.md
scripts/: QUICK_START_STORY.md  STORY_GENERATION_README.md  TRANSCRIPTION_README.md  _bootstrap_beholder_thrulm.py  _upsert_beholder_thrulm.py  ages_converter.py  build_dice_font.py  build_timeline_key.py  build_timeline_svg.py  clipboard_circle.py  combat_actions_db.py  convert_session_1.sh  dnd_roller.py  fix-md-links.py  html-export-simple.py  html-export.py  lore.py  lore_inconsistencies.py  migrate_actions_toml_to_jsonl.py  pandoc-export.py  research_curve.py  srd5_2.py  transcribe_audio.py  transcript_to_story.py  validate_font_macos.py
sessions/: README.md
staging/: README.md  character-creation-guide.md  quest-ravens-gnoll-conversion.md
templates/: README.md  character-combat-runner-template.md  character-template.md  creature-combat-ready-template.md  creature-template.md  faction-template.md  item-template.md  location-template.md  npc-combat-protocol.md  npc-combat-runner-template.md  party-member-abilities-template.md  party-template.md  quest-template.md  session-notes-template.md  session-planning-template.md
world/: README.md  _history.config.toml  calendar-reckoning-of-the-fall.md  character-registry.tsv  map-deep-fall.md.wonderdraft_map  map.wonderdraft_map  map_thrulm.wonderdraft_map  summary_temp.md
(+1347 files in other folders)
