[project]
name = "dnd-notes"
version = "0.0.0"
description = "Local tooling for exporting Markdown notes to PDF."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "ipykernel",
  "pandas",
  "pillow>=12.2.0",
  "pytest",
  "cairosvg",
  "chromadb",
  "python-dotenv",
  "tomlkit",
  "requests-cache>=1.3.1"
]

# Notes on native text layout (RAQM):
# - On macOS, install native libs first:
#     brew install libraqm harfbuzz fribidi freetype
# - Pillow only enables RAQM if it's built from source *after* those libs are installed.
# - uv config below forces Pillow to build from source (no wheel), allowing RAQM detection.

[tool.uv.pip]
no-binary = ["pillow"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (uses real API tokens, costs money)",
]
testpaths = ["scripts/tests"]
python_files = ["test_*.py"]
