[project]
name = "dnd-notes"
version = "0.0.0"
description = "Local tooling for exporting Markdown notes to PDF."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "ipykernel",
  "pandas",
  "pillow>=12.2.0",
  "pytest",
  "cairosvg",
  "chromadb",
  "python-dotenv",
  "tomlkit",
  "requests-cache>=1.3.1",
  "fonttools>=4.50.0",
  "anthropic>=0.100.0",
  "pexpect>=4.9.0",
  "PySide6>=6.7",
  "qt-material>=2.14",
  "pytest-qt>=4.4"
]

# Notes on native text layout (RAQM):
# - On macOS, install native libs first:
#     brew install libraqm harfbuzz fribidi freetype
# - Pillow only enables RAQM if it's built from source *after* those libs are installed.
# - uv config below forces Pillow to build from source (no wheel), allowing RAQM detection.

[tool.uv.pip]
no-binary = ["pillow"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# Conservative, low-noise rule set: pycodestyle errors, pyflakes, import sorting.
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (uses real API tokens, costs money)",
    "scenario: combat-runner end-to-end scenario tests (full GUI boot, ergonomics metrics; deselect with `-m 'not scenario'`)",
]
testpaths = ["scripts/tests", "combat-runner/tests"]
python_files = ["test_*.py"]
